<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tv_app_name"
        android:textColor="@color/tv_app_name"
        android:textSize="26sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/current_version"
        android:textColor="@color/tv_should_packing"
        android:textSize="20sp" />

    <Button
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/selector_button_version"
        android:text="@string/check_version"
        android:textColor="@color/tv_text_white"
        android:textSize="24sp" />

</LinearLayout>